[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["Andrii Siryi <aserworkm@gmail.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "personal_assistant"}

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"